umbral/source/test/lit/basic/54_bad_float_suffix.um
# RUN: not %uc %s 2>&1 | %FileCheck %s

const main := fn() -> i32 {
  const x := 3.0i32;
  return 0;
}

# CHECK: error: integer type suffix on float literal
